<?xml version="1.0" encoding="utf-8"?>
<!--
      Copyright (C) 2012 CONIT Co., Ltd.
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at

           http://www.apache.org/licenses/LICENSE-2.0

      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
      See the License for the specific language governing permissions and
      limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settings_background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp" >

        <Button
            android:id="@+id/btn_regist"
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                style="@style/setting_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_tag" />

            <RadioGroup
                android:id="@+id/radiogroup_gender"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radiobtn_male"
                    style="@style/radiobtn_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/radiobtn_female"
                    style="@style/radiobtn_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                style="@style/setting_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_locale" />

            <TextView
                android:id="@+id/text_locale"
                style="@style/setting_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_set_locale"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/btn_locale_setting_selector" />
        </LinearLayout>

        <TextView
            style="@style/setting_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:text="@string/change_font_size" />

        <TextView
            android:id="@+id/text_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_area"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/change_font_size_msg"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/notice"
            android:textColor="@color/black" />
    </LinearLayout>

</ScrollView>